--- a/media/css/cms/flare-defaults.css
+++ b/media/css/cms/flare-defaults.css
@@ -46,19 +46,18 @@ p {
     line-height: 1.6;
 }
 
-a {
-    color: var(--neutrals-charcoal);
-    text-decoration: none;
+a:link, a:visited {
+    color: light-dark(var(--blue-button), var(--blue-blue));
+    text-decoration: underline;
     transition: color var(--transition-fast);
 }
 
-a:hover, a:active, a:focus {
-    color: var(--blue-dark-blue);
-    text-decoration: underline;
+a:visited {
+    color: light-dark(var(--purple-purple), var(--purple-light-purple));
 }
 
-a:visited {
-    color: var(--neutrals-charcoal);
+a:hover, a:active, a:focus {
+    text-decoration: none;
 }
 
 img, svg {
