--- a/media/css/cms/flare-theme.css
+++ b/media/css/cms/flare-theme.css
@@ -98,8 +98,9 @@ non-determinative so you need to check and adjust the results as needed.
     --font-family-inter: 'Inter', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', sans-serif;
     --font-family-mozilla-text: 'Mozilla Text VF BETA', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', sans-serif;
     --font-weight-regular: 400;
-    --font-weight-medium: 500;
+    --font-weight-medium: 500; /* Metropolis only */
     --font-weight-semibold: 600;
+    --font-weight-bold: 700; /* Inter only */
     --font-family-headline: var(--font-family-metropolis);
     --font-weight-headline: var(--font-weight-semibold);
     --font-family-subheader: var(--font-family-metropolis);
@@ -110,8 +111,8 @@ non-determinative so you need to check and adjust the results as needed.
     --font-weight-link: var(--font-weight-semibold);
     --font-family-label: var(--font-family-inter);
     --font-weight-label: var(--font-weight-medium);
-    --font-family-button: var(--font-family-mozilla-text);
-    --font-weight-button: var(--font-weight-semibold);
+    --font-family-button: var(--font-family-metropolis);
+    --font-weight-button: var(--font-weight-medium);
 
     /* Font size variables NOT from Figma */
     --font-size-base: 16px;
